--- a/MatrixGenerator/MatrixGenerator.csproj
+++ b/MatrixGenerator/MatrixGenerator.csproj
@@ -49,9 +49,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Parcs\Parcs.csproj">
-      <Project>{73e7db23-be33-4c7f-89b5-e27523e71496}</Project>
-      <Name>Parcs</Name>
+    <ProjectReference Include="..\NewMatrixModule\NewMatrixModule.csproj">
+      <Project>{9494fde9-be22-45b5-a852-fa0494fcb14d}</Project>
+      <Name>NewMatrixModule</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
