--- a/NewMatrixModule/NewMatrixModule.csproj
+++ b/NewMatrixModule/NewMatrixModule.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Matrix.cs" />
     <Compile Include="MatrixesModule.cs" />
-    <Compile Include="MyMatrix.cs" />
     <Compile Include="MultMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
