--- a/Daemon/DaemonPr.csproj
+++ b/Daemon/DaemonPr.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,7 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Daemon.cs" />
+    <Compile Include="Daemon.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Linpack.cs" />
     <Compile Include="ModuleExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
