--- a/HostServer/App.config
+++ b/HostServer/App.config
@@ -2,11 +2,15 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="log4net.Internal.Debug" value="true" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-
   <!-- Log4net Logging Setup -->
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
@@ -22,10 +26,59 @@
         <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
       </layout>
     </appender>
+    <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
+      <immediateFlush value="true" />
+      <layout type="log4net.Layout.SimpleLayout" />
+    </appender>
+    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="1" />
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionStringName value="HostServerContext" />
+      <commandText value="INSERT INTO LogEntries ([DateTimeUtc], [Thread], [Level], [Logger], [Message]) VALUES (@log_date, @thread, @log_level, @logger, @message)" />
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawUtcTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%thread" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="-1" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message%newline%exception" />
+        </layout>
+      </parameter>
+    </appender>
     <root>
       <level value="All" />
       <appender-ref ref="Console" />
       <appender-ref ref="FileAppender" />
+      <appender-ref ref="AdoNetAppender" />
+      <appender-ref ref="DebugAppender" />
     </root>
   </log4net>
   <runtime>
@@ -40,4 +93,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="HostServerContext" connectionString="Server=.\SQLEXPRESS;Database=ParcsHostServer;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
