--- a/HostServer/HostServer.csproj
+++ b/HostServer/HostServer.csproj
@@ -38,6 +38,14 @@
     <StartupObject>HostServer.TCPHostServer</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
@@ -67,6 +75,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -97,6 +107,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPointInfo.cs" />
+    <Compile Include="Migrations\201606022033492_1.cs" />
+    <Compile Include="Migrations\201606022033492_1.Designer.cs">
+      <DependentUpon>201606022033492_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistance\Logs\HostServerContext.cs" />
+    <Compile Include="Persistance\Logs\LogEntry.cs" />
     <Compile Include="PointInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
@@ -123,6 +139,11 @@
       <Project>{73e7db23-be33-4c7f-89b5-e27523e71496}</Project>
       <Name>Parcs</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606022033492_1.resx">
+      <DependentUpon>201606022033492_1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
