--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,13 @@
   "author": "Mykola & Khavro",
   "license": "ISC",
   "devDependencies": {
+    "angular": "^1.5.5",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
     "gulp-sass": "^2.3.1",
+    "highcharts": "^4.2.5",
     "jshint": "^2.9.2",
     "vinyl-source-stream": "^1.1.0"
   }
