--- a/RestApi/Web.config
+++ b/RestApi/Web.config
@@ -55,4 +55,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HostServerContext" connectionString="Server=.\SQLEXPRESS;Database=ParcsHostServer;Integrated Security=True" providerName="System.Data.SqlClient" />  
+  </connectionStrings> 
 </configuration>
