Add JobStatus and change DTO accordingly

--- a/Parcs.Api.Dto/Parcs.Api.Dto.csproj
+++ b/Parcs.Api.Dto/Parcs.Api.Dto.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="HostInfoDto.cs" />
     <Compile Include="JobInfoDto.cs" />
+    <Compile Include="JobStatus.cs" />
     <Compile Include="PointInfoDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
