Expose CancelJob endpoint with minor fixes

--- a/Parcs.Api.Dto/Parcs.Api.Dto.csproj
+++ b/Parcs.Api.Dto/Parcs.Api.Dto.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CancelJobDto.cs" />
     <Compile Include="HostInfoDto.cs" />
     <Compile Include="JobInfoDto.cs" />
     <Compile Include="JobStatus.cs" />
