--- a/RestApi/app/package.json
+++ b/RestApi/app/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.5.5",
+    "angular-local-storage": "^0.2.7",
+    "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
