--- a/RestApi/app/package.json
+++ b/RestApi/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.5.5",
+    "angular-ui-bootstrap": "^1.3.3",
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
