--- a/RestApi/Web.config
+++ b/RestApi/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <appSettings>
     <add key="hostServerUrl" value="http://localhost:1236" />
+    <add key="matrixModuleFilePath" value="C:\Projects\parcscsharp\Parcs.NET\NewMatrixModule\bin\Release\NewMatrixModule.exe" />
+    <add key="matrixStorageFolder" value="C:\Projects\parcscsharp\Parcs.NET\MatrixGenerator\bin\Release" />  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
