--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -189,11 +189,14 @@
     <Compile Include="Bootstrap\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\ParcsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrap\Startup.cs" />
+    <Compile Include="Services\IModuleRunner.cs" />
     <Compile Include="Services\IParcsService.cs" />
     <Compile Include="Services\IRestApiClient.cs" />
+    <Compile Include="Services\ModuleRunner.cs" />
     <Compile Include="Services\ParcsService.cs" />
     <Compile Include="Services\RestApiClient.cs" />
   </ItemGroup>
