--- a/RestApi/Web.config
+++ b/RestApi/Web.config
@@ -7,11 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <appSettings>
     <add key="hostServerUrl" value="http://localhost:1236" />
     <add key="matrixModuleFilePath" value="C:\Projects\parcscsharp\Parcs.NET\NewMatrixModule\bin\Release\NewMatrixModule.exe" />
-    <add key="matrixStorageFolder" value="C:\Projects\parcscsharp\Parcs.NET\MatrixGenerator\bin\Release" />  
+    <add key="matrixStorageFolder" value="C:\Projects\parcscsharp\Parcs.NET\MatrixGenerator\bin\Release" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -59,5 +60,19 @@
   </entityFramework>
   <connectionStrings>
     <add name="HostServerContext" connectionString="Server=.\SQLEXPRESS;Database=ParcsHostServer;Integrated Security=True" providerName="System.Data.SqlClient" />  
-  </connectionStrings> 
+  </connectionStrings>
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
+      <file value="C:\logs\ParcsApi.log.txt" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="All" />
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
 </configuration>
