Get module names from server: broken dropdown

--- a/Parcs.Api.Dto/Parcs.Api.Dto.csproj
+++ b/Parcs.Api.Dto/Parcs.Api.Dto.csproj
@@ -47,6 +47,7 @@
     <Compile Include="JobStatus.cs" />
     <Compile Include="MatrixModuleDto.cs" />
     <Compile Include="MatrixSize.cs" />
+    <Compile Include="ModuleDto.cs" />
     <Compile Include="PointInfoDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
