--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -181,7 +181,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthProviders\SimpleAuthorizationServerProvider.cs" />
@@ -198,9 +200,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrap\Startup.cs" />
     <Compile Include="Services\IModuleRunner.cs" />
+    <Compile Include="Services\IModuleService.cs" />
     <Compile Include="Services\IParcsService.cs" />
     <Compile Include="Services\IRestApiClient.cs" />
     <Compile Include="Services\ModuleRunner.cs" />
+    <Compile Include="Services\ModuleService.cs" />
     <Compile Include="Services\ParcsService.cs" />
     <Compile Include="Services\RestApiClient.cs" />
   </ItemGroup>
