--- a/RestApi/Web.config
+++ b/RestApi/Web.config
@@ -13,6 +13,7 @@
     <add key="hostServerUrl" value="http://localhost:1236" />
     <add key="matrixModuleFilePath" value="C:\Projects\parcscsharp\Parcs.NET\NewMatrixModule\bin\Release\NewMatrixModule.exe" />
     <add key="matrixStorageFolder" value="C:\Projects\parcscsharp\Parcs.NET\MatrixGenerator\bin\Release" />
+    <add key="moduleFolder" value="C:\ParcsModules"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
