Allow running modules specifying command line parameters instead of hardcoding matrix module

--- a/Parcs.Api.Dto/Parcs.Api.Dto.csproj
+++ b/Parcs.Api.Dto/Parcs.Api.Dto.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ModuleDto.cs" />
     <Compile Include="PointInfoDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunModuleDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
