--- a/Parcs/Parcs.csproj
+++ b/Parcs/Parcs.csproj
@@ -39,6 +39,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +56,7 @@
     <Compile Include="ConcurrentChannel.cs" />
     <Compile Include="ConcurrentPoint.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="BaseModuleOptions.cs" />
     <Compile Include="Job.cs" />
     <Compile Include="HostInfo.cs" />
     <Compile Include="IChannel.cs" />
