Add nuget spec files

--- a/Parcs.Module.CommandLine/Parcs.Module.CommandLine.csproj
+++ b/Parcs.Module.CommandLine/Parcs.Module.CommandLine.csproj
@@ -58,6 +58,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="Parcs.Module.CommandLine.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parcs\Parcs.csproj">
