Add basic docker support

--- a/HostServer/HostServer.csproj
+++ b/HostServer/HostServer.csproj
@@ -104,6 +104,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Dockerfile" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
