--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -173,6 +173,7 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="packages.config" />
+    <Content Include="Dockerfile" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
