Connect Daemon to HostServer via IP from environment variable on start

--- a/Daemon/DaemonPr.csproj
+++ b/Daemon/DaemonPr.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="Daemon.cs">
       <SubType>Component</SubType>
     </Compile>
