--- a/HostServer/Dockerfile
+++ b/HostServer/Dockerfile
@@ -1,11 +1,11 @@
-FROM microsoft/windowsservercore
+FROM microsoft/windowsservercore:1709
 
 WORKDIR /parcs-hostserver
-
-ADD bin/Release /parcs-hostserver
 
 EXPOSE 1234
 
 EXPOSE 1236
+
+ADD bin/Release /parcs-hostserver
 
 CMD ["HostServer.exe", "--docker"]
