--- a/HostServer/Dockerfile
+++ b/HostServer/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/windowsservercore:1709
+FROM microsoft/nanoserver:1709
 
 WORKDIR /parcs-hostserver
 
@@ -6,6 +6,6 @@ EXPOSE 1234
 
 EXPOSE 1236
 
-ADD bin/Release /parcs-hostserver
+COPY . .
 
 CMD ["HostServer.exe", "--docker"]
